WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298157
[JSC] Fix an !binding.isScratch() assertion failure on 32-bit
https://bugs.webkit.org/show_bug.cgi?id=298157
Summary
[JSC] Fix an !binding.isScratch() assertion failure on 32-bit
Mikhail R. Gadelha
Reported
2025-08-30 14:04:54 PDT
In 32-bit we use scratch fp regs that need to be unbound before the ccall
Attachments
Add attachment
proposed patch, testcase, etc.
Mikhail R. Gadelha
Comment 1
2025-08-30 14:16:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50106
Radar WebKit Bug Importer
Comment 2
2025-09-06 14:05:13 PDT
<
rdar://problem/160025341
>
EWS
Comment 3
2025-09-11 07:21:36 PDT
Committed
299853@main
(4e83acc55657): <
https://commits.webkit.org/299853@main
> Reviewed commits have been landed. Closing PR #50106 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug